crates/biome_html_parser/tests/html_specs/ok/svelte/await_catch_only.svelte
{#await promise catch error}
  <p>Error: {error.message}</p>
{/await}
