crates/biome_html_parser/tests/html_specs/error/svelte/await_catch_before_then.svelte
{#await promise}
  <p>Loading...</p>
{:catch error}
  <p>{error.message}</p>
{:then value}
  <p>{value}</p>
{/await}
